StreamGathererUtil.mapAndFilter(), StreamGathererUtil.filterAndMap(); add Java 24 unit tests